--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ repository = "https://github.com/ig-rudenko/encrypt-storage"
 license = "Apache 2.0"
 readme = "README.md"
 keywords = ["remote-storage", "yandex-disk", "encryption-decryption"]
-packages = [{include = "storages"}]
+packages = [{include = "encrypt_storages"}]
 
 [tool.poetry.dependencies]
 python = ">3.9"
 requests = ">=2.31.0"
 cryptography = ">=41.0.5"
 aiohttp = ">=3.8.6"
+aiofiles = "^23.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
